--- a/.github/workflows/build-theme.yml
+++ b/.github/workflows/build-theme.yml
@@ -13,30 +13,42 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-      
+
       - name: Install dependencies
         working-directory: ./frontend
         run: npm ci
-      
+
       - name: Build theme
         working-directory: ./frontend
         run: npm run build:theme
-      
+
+      - name: Copy frontend/dist to repo root /dist
+        run: |
+          rm -rf dist
+          mkdir -p dist
+          cp -a frontend/dist/. dist/
+
+      - name: Verify copied files
+        run: |
+          echo "Repo root dist contents:"
+          ls -la dist || true
+          echo "frontend/dist contents:"
+          ls -la frontend/dist || true
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist/
           retention-days: 7
-
